--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,31 @@
-= Fulcro RAD Demo 
+= Planet Clojure RSS Feed Reader
+
+This is a toy application that lets you read past articles from the Planet Clojure
+RSS feed (downloaded December 2019), written on top of the Fulcro RAD demo application.
+
+It is intended to show how one would build a simple application with Fulcro.
+
+It has two screens:
+
+- Main:  show all 7120 RSS stories, with keybaord navigation to show full version of current story
+- Search: search articles: one input form to trigger search on server
+
+It demonstrates using Pathom to retrieve stories and search results.
+
+It includes the Google Cloud Build, which targets Google Cloud Run.
+
+You can run the application https://feedly-reader-rhpg5b3znq-uc.a.run.app/[here].
+
+Screenshot below:
+
+image::screenshot.png[]
+
+
+== Acknowledgements
+
+Thank you to Jakub Holy, Tony Kay, Wilker Lucio for all the help you gave me!
+
+= Fulcro RAD Demo
 
 This is a demo repository for Fulcro RAD. It includes a shared source directory of files that would be
 common to any project, and then separate source directories that have specific files that would be
