mention cold start

--- a/README.adoc
+++ b/README.adoc
@@ -16,11 +16,11 @@ It demonstrates using Pathom to retrieve stories and search results.
 
 == Server
 
-The Clojure server reads from `resources/stoires.txt` (an EDN file) and uses it as its "database."
+The Clojure server reads from `resources/stories.txt` (an EDN file) and uses it as its "database."
 
 This project includes files to build using Google Cloud Build, and to deploy into Google Cloud Run.
 
-You can run the application https://feedly-reader-rhpg5b3znq-uc.a.run.app/[here].
+You can run the application https://feedly-reader-rhpg5b3znq-uc.a.run.app/[here].  (It may take 10-20s for it to startup -- I'm extremely pleased with how fast it can start.  It handles cold starts faster than Heroku by adding memory and cores.)
 
 Screenshot below:
 
